[package]
name = "dissect-netwayste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.13"
pcap = { version = "1", features = ["capture-stream"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.netwaystev2]
git = "https://github.com/conwayste/conwayste/"
branch = "mang/netwayste_v2"
