[package]
name = "dissect-netwayste"
version = "0.2.0"
edition = "2021"

[dependencies]
bincode = "1.3.1"
clap = { version = "4.2.1", features = ["derive"] }
etherparse = "0.13"
pcap = { version = "1", features = ["capture-stream"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.netwaystev2]
git = "https://github.com/conwayste/conwayste/"
branch = "mang/netwayste_v2"
